deploy-zipkin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zipkin
  labels:
    app: zipkin
    owner: vin8
spec:
  containers:
    - name: zipkin
      image: openzipkin/zipkin
      ports:
        - name: zipkin-web
          containerPort: 9411
      imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    owner: vin8
spec:
  type: NodePort
  selector:
    app: zipkin
  ports:
    - name: zipkin-web
      port: 9411
      targetPort: 9411
      nodePort: 30003
