deploy.yml
##################################################################################################
# BACKEND service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: backend
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "backend"
  namespace: "default"
  labels:
    app: "backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "backend"
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      containers:
      - name: "fastify-backend"
        image: "fastify-backend:latest"
---
apiVersion: "autoscaling/v2beta1"
kind: "HorizontalPodAutoscaler"
metadata:
  name: "backend-hpa"
  namespace: "default"
  labels:
    app: "backend"
spec:
  scaleTargetRef:
    kind: "Deployment"
    name: "backend"
    apiVersion: "apps/v1beta1"
  minReplicas: 1
  maxReplicas: 5
  metrics:
  - type: "Resource"
    resource:
      name: "cpu"
      targetAverageUtilization: 80
##################################################################################################
# FRONTEND service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: frontend
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "frontend"
  namespace: "default"
  labels:
    app: "frontend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
      - name: "fastify-frontend"
        image: "fastify-frontend:latest"
